--- a/tutorial/tutorial_2d_pvps.ipynb
+++ b/tutorial/tutorial_2d_pvps.ipynb
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "id": "kTP04tYwNOIq"
    },
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "id": "s31F-VVWLa7z"
    },
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "id": "YuNAlbQpNkLa"
    },
@@ -99,7 +99,8 @@
     "#@markdown ## Data location. Please edit.\n",
     "\n",
     "#@markdown #### Replace this path with your own tfrecords. A tfrecord containing tf.Example protos as downloaded from the Waymo dataset webpage.\n",
-    "FILE_NAME = '/content/waymo-open-dataset/tutorial/.../tfexample.tfrecord' #@param {type:\"string\"}\n",
+    "FILENAME = '/home/simon/Dataset/testing/uncompressed_tf_example_testing_testing_tfexample.tfrecord-00000-of-00150'\n",
+    "# FILE_NAME = '/content/waymo-open-dataset/tutorial/.../tfexample.tfrecord' #@param {type:\"string\"}\n",
     "\n",
     "#@markdown #### Replace this directory with your own dataset folder for evaluation.\n",
     "EVAL_DIR = '/dataset_path/validation/' #@param {type: \"string\"}\n",
@@ -113,11 +114,12 @@
     "\n",
     "#@markdown #### Replace this directory with your own local folder saving the submission.\n",
     "SAVE_FOLDER = '/tmp/camera_segmentation_challenge/testing/' #@param {type: \"string\"}\n",
-    "\n"]
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "id": "xCDNLdp9Ni8a"
    },
@@ -155,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "id": "O41R3lljM9Ym"
    },
@@ -180,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "id": "wHK95_JBUXUx"
    },
@@ -211,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "id": "gS6MKTorSQrT"
    },
@@ -252,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "id": "VMsODRP4YrHj"
    },
@@ -282,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "id": "zYtrSEkXgpH8"
    },
@@ -311,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "id": "0IEvJgL9gMdR"
    },
@@ -354,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "id": "Hj5lXAlJXjKk"
    },
@@ -377,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "id": "fgCDPt9zeV_k"
    },
@@ -401,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "id": "f6B9BdAuZLyN"
    },
@@ -470,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "id": "ki4xdqN2QYG1"
    },
@@ -487,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "id": "eqxLTfmPZWJO"
    },
@@ -507,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "id": "vLd6IaPSsQy-"
    },
@@ -543,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "id": "uwlvldaa_Oo3"
    },
@@ -669,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "id": "VCowlAtjZHnR"
    },
@@ -693,7 +695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "id": "_7p3Bx_md_LZ"
    },
@@ -742,7 +744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "id": "XgGSt3p0OmO2"
    },
